#
# Copyright (C) 2016 The Android Open Source Project
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
#

project(TENSORFLOW_DEMO)
cmake_minimum_required(VERSION 3.4.1)

set(CMAKE_VERBOSE_MAKEFILE on)

set(CMAKE_BUILD_TYPE "Release")

if (ANDROID_ABI MATCHES "^armeabi-v7a$")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -mfloat-abi=softfp -mfpu=neon")
elseif(ANDROID_ABI MATCHES "^arm64-v8a")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0 -ftree-vectorize")
endif()

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DSTANDALONE_DEMO_LIB \
                    -std=c++11 -fno-exceptions -frtti -O2 -Wno-narrowing \
                    -fPIE \
                    -DHAVE_PTHREAD \
                     ")
set(CMAKE_SHARED_LINKER_FLAGS "${CMAKE_SHARED_LINKER_FLAGS} \
                              -Wl,--allow-multiple-definition \
                              -Wl,--whole-archive -fPIE -v")
###########################################
MESSAGE(STATUS "Project: tensorflow_inference")

add_library(tensorflow_inference SHARED
            tensorflow/c/c_api.cc
            tensorflow/core/framework/allocation_description.pb_text.cc
            tensorflow/core/framework/resource_handle.pb_text.cc
            tensorflow/core/framework/tensor_description.pb_text.cc
            tensorflow/core/framework/function.pb_text.cc
            tensorflow/core/framework/op_def.pb_text.cc
            tensorflow/core/framework/attr_value.pb_text.cc
            tensorflow/core/framework/tensor_shape.pb_text.cc
            tensorflow/core/framework/tensor_slice.pb_text.cc
            tensorflow/core/framework/tensor.pb_text.cc
            tensorflow/core/framework/step_stats.pb_text.cc
            tensorflow/core/framework/graph.pb_text.cc
            tensorflow/core/framework/cost_graph.pb_text.cc
            tensorflow/core/framework/reader_base.pb.cc
            tensorflow/core/framework/log_memory.pb_text.cc
            tensorflow/core/framework/node_def.pb_text.cc
            tensorflow/core/protobuf/rewriter_config.pb_text.cc
            tensorflow/core/protobuf/cluster.pb_text.cc
            tensorflow/core/protobuf/debug.pb_text.cc
            tensorflow/core/protobuf/tensor_bundle.pb.cc
            tensorflow/core/framework/types.pb_text.cc
            tensorflow/core/framework/versions.pb_text.cc
            tensorflow/core/framework/kernel_def.pb_text.cc
            tensorflow/core/util/saved_tensor_slice.pb_text.cc
            tensorflow/core/example/feature.pb_text.cc
            tensorflow/core/protobuf/config.pb_text.cc
            tensorflow/core/graph/edgeset.cc
            tensorflow/core/kernels/ops_util.cc
            tensorflow/core/kernels/pooling_ops_common.cc
            tensorflow/core/util/tensor_bundle/naming.cc
            tensorflow/core/util/tensor_bundle/tensor_bundle.cc
            tensorflow/core/util/test_log.pb.cc
            tensorflow/core/util/saved_tensor_slice.pb.cc
            tensorflow/core/util/memmapped_file_system.pb.cc
            tensorflow/core/util/event.pb.cc
            tensorflow/core/protobuf/tensorflow_server.pb.cc
            tensorflow/core/protobuf/saver.pb.cc
            tensorflow/core/protobuf/queue_runner.pb.cc
            tensorflow/core/protobuf/named_tensor.pb.cc
            tensorflow/core/protobuf/meta_graph.pb.cc
            tensorflow/core/protobuf/cluster.pb.cc
            tensorflow/core/protobuf/config.pb.cc
            tensorflow/core/protobuf/rewriter_config.pb.cc
            tensorflow/core/protobuf/debug.pb.cc
            tensorflow/core/protobuf/device_properties.pb.cc
             tensorflow/core/lib/core/error_codes.pb.cc
            tensorflow/core/framework/resource_handle.cc
            tensorflow/core/framework/allocator.cc
            tensorflow/core/framework/allocator_registry.cc
            tensorflow/core/framework/attr_value_util.cc
            tensorflow/core/framework/bfloat16.cc
            tensorflow/core/framework/cancellation.cc
            tensorflow/core/framework/common_shape_fns.cc
            tensorflow/core/framework/device_base.cc
            tensorflow/core/framework/fake_input.cc
            tensorflow/core/framework/function.cc
            tensorflow/core/framework/graph_def_util.cc
            tensorflow/core/framework/kernel_def_builder.cc
            tensorflow/core/framework/load_library.cc
            tensorflow/core/framework/log_memory.cc
            tensorflow/core/framework/lookup_interface.cc
            tensorflow/core/framework/memory_types.cc
            tensorflow/core/framework/node_def_builder.cc
            tensorflow/core/framework/node_def_util.cc
            tensorflow/core/framework/op.cc
            tensorflow/core/framework/op_def_builder.cc
            tensorflow/core/framework/op_def_util.cc
            tensorflow/core/framework/op_kernel.cc
            tensorflow/core/framework/op_segment.cc
            tensorflow/core/framework/reader_base.cc
            tensorflow/core/framework/rendezvous.cc
            tensorflow/core/framework/resource_mgr.cc
            tensorflow/core/framework/shape_inference.cc
            tensorflow/core/framework/shape_inference_testutil.cc
            tensorflow/core/framework/tensor.cc
            tensorflow/core/framework/tensor_reference.cc
            tensorflow/core/framework/tensor_shape.cc
            tensorflow/core/framework/tensor_slice.cc
            tensorflow/core/framework/tensor_util.cc
            tensorflow/core/framework/tracking_allocator.cc
            tensorflow/core/framework/types.cc
            tensorflow/core/framework/unique_tensor_references.cc
            tensorflow/core/framework/variant.cc
            tensorflow/core/framework/versions.cc
            tensorflow/core/framework/versions.pb.cc
            tensorflow/core/framework/variable.pb.cc
            tensorflow/core/framework/types.pb.cc
            tensorflow/core/framework/tensor_slice.pb.cc
            tensorflow/core/framework/tensor_shape.pb.cc
            tensorflow/core/framework/tensor_description.pb.cc
            tensorflow/core/framework/tensor.pb.cc
            tensorflow/core/framework/summary.pb.cc
            tensorflow/core/framework/step_stats.pb.cc
            tensorflow/core/framework/resource_handle.pb.cc
            tensorflow/core/framework/remote_fused_graph_execute_info.pb.cc
            tensorflow/core/framework/op_def.pb.cc
            tensorflow/core/framework/node_def.pb.cc
            tensorflow/core/framework/log_memory.pb.cc
            tensorflow/core/framework/kernel_def.pb.cc
            tensorflow/core/framework/graph_transfer_info.pb.cc
            tensorflow/core/framework/graph.pb.cc
            tensorflow/core/framework/function.pb.cc
            tensorflow/core/framework/device_attributes.pb.cc
            tensorflow/core/framework/cost_graph.pb.cc
            tensorflow/core/framework/attr_value.pb.cc
            tensorflow/core/framework/allocation_description.pb.cc
            tensorflow/core/example/feature.pb.cc
            tensorflow/core/example/example.pb.cc
            tensorflow/tools/proto_text/gen_proto_text_functions_lib.cc
            tensorflow/tools/proto_text/gen_proto_text_functions.cc
            tensorflow/core/platform/default/protobuf.cc
            tensorflow/core/platform/default/tracing.cc
            tensorflow/core/platform/default/logging.cc
            tensorflow/core/platform/default/gpu/cupti_wrapper.cc
            tensorflow/core/platform/cloud/file_block_cache.cc
            tensorflow/core/platform/cloud/retrying_file_system.cc
            tensorflow/core/platform/cloud/retrying_utils.cc
            tensorflow/core/platform/cloud/time_util.cc
            tensorflow/core/platform/posix/posix_file_system.cc
            tensorflow/core/platform/posix/port.cc
            tensorflow/core/platform/posix/error.cc
            tensorflow/core/platform/posix/env.cc
            tensorflow/core/platform/posix/load_library.cc
            tensorflow/core/platform/posix/env_time.cc
            tensorflow/core/platform/posix/net.cc
            tensorflow/core/platform/posix/subprocess.cc
            tensorflow/core/platform/posix/tracing.cc
            tensorflow/core/platform/profile_utils/android_armv7a_cpu_utils_helper.cc
            tensorflow/core/platform/profile_utils/clock_cycle_profiler.cc
            tensorflow/core/platform/profile_utils/cpu_utils.cc
            tensorflow/core/platform/file_system.cc
            tensorflow/core/platform/env.cc
            tensorflow/core/platform/env_time.cc
            tensorflow/core/platform/denormal.cc
            tensorflow/core/platform/cpu_info.cc
            tensorflow/core/platform/cpu_feature_guard.cc
            tensorflow/core/platform/protobuf_util.cc
            tensorflow/core/platform/setround.cc
            tensorflow/core/platform/tracing.cc
            tensorflow/core/platform/tensor_coding.cc
            tensorflow/core/platform/variant_coding.cc
            tensorflow/core/util/ctc/ctc_loss_calculator.cc
            tensorflow/core/util/sparse/group_iterator.cc
            tensorflow/core/util/tensor_bundle/naming.cc
            tensorflow/core/util/tensor_bundle/tensor_bundle.cc
            tensorflow/core/util/activation_mode.cc
            tensorflow/core/util/bcast.cc
            tensorflow/core/util/command_line_flags.cc
            tensorflow/core/util/device_name_utils.cc
            tensorflow/core/util/env_var.cc
            tensorflow/core/util/equal_graph_def.cc
            tensorflow/core/util/example_proto_fast_parsing.cc
            tensorflow/core/util/example_proto_helper.cc
            tensorflow/core/util/guarded_philox_random.cc
            tensorflow/core/util/matmul_autotune.cc
            tensorflow/core/util/memmapped_file_system.cc
            tensorflow/core/util/memmapped_file_system_writer.cc
            tensorflow/core/util/mirror_pad_mode.cc
            tensorflow/core/util/padding.cc
            tensorflow/core/util/port.cc
            tensorflow/core/util/saved_tensor_slice_util.cc
            tensorflow/core/util/stat_summarizer.cc
            tensorflow/core/util/strided_slice_op.cc
            tensorflow/core/util/tensor_format.cc
            tensorflow/core/util/tensor_slice_reader.cc
            tensorflow/core/util/tensor_slice_reader_cache.cc
            tensorflow/core/util/tensor_slice_set.cc
            tensorflow/core/util/tensor_slice_writer.cc
            tensorflow/core/util/use_cudnn.cc
            tensorflow/core/util/util.cc
            tensorflow/core/util/work_sharder.cc
            tensorflow/core/lib/wav/wav_io.cc
            tensorflow/core/lib/strings/stringprintf.cc
            tensorflow/core/lib/strings/strcat.cc
            tensorflow/core/lib/strings/str_util.cc
            tensorflow/core/lib/strings/scanner.cc
            tensorflow/core/lib/strings/proto_text_util.cc
            tensorflow/core/lib/strings/ordered_code.cc
            tensorflow/core/lib/strings/numbers.cc
            tensorflow/core/lib/random/weighted_picker.cc
            tensorflow/core/lib/random/simple_philox.cc
            tensorflow/core/lib/random/random.cc
            tensorflow/core/lib/random/distribution_sampler.cc
            tensorflow/core/lib/io/snappy/snappy_inputbuffer.cc
            tensorflow/core/lib/io/snappy/snappy_outputbuffer.cc
            tensorflow/core/lib/io/zlib_outputbuffer.cc
            tensorflow/core/lib/io/zlib_inputstream.cc
            tensorflow/core/lib/io/two_level_iterator.cc
            tensorflow/core/lib/io/table_builder.cc
            tensorflow/core/lib/io/table.cc
            tensorflow/core/lib/io/record_writer.cc
            tensorflow/core/lib/io/record_reader.cc
            tensorflow/core/lib/io/random_inputstream.cc
            tensorflow/core/lib/io/path.cc
            tensorflow/core/lib/io/iterator.cc
            tensorflow/core/lib/io/inputstream_interface.cc
            tensorflow/core/lib/io/inputbuffer.cc
            tensorflow/core/lib/io/format.cc
            tensorflow/core/lib/io/compression.cc
            tensorflow/core/lib/io/buffered_inputstream.cc
            tensorflow/core/lib/io/block_builder.cc
            tensorflow/core/lib/io/block.cc
            tensorflow/core/lib/monitoring/collection_registry.cc
            tensorflow/core/lib/histogram/histogram.cc
            tensorflow/core/lib/hash/hash.cc
            tensorflow/core/lib/hash/crc32c.cc
            tensorflow/core/lib/hash/crc32c_accelerate.cc
            tensorflow/core/lib/core/threadpool.cc
            tensorflow/core/lib/core/stringpiece.cc
            tensorflow/core/lib/core/status.cc
            tensorflow/core/lib/core/coding.cc
            tensorflow/core/lib/core/arena.cc
            tensorflow/core/lib/core/bitmap.cc
            tensorflow/core/common_runtime/sycl/sycl_allocator.cc
            tensorflow/core/common_runtime/sycl/sycl_device.cc
            tensorflow/core/common_runtime/sycl/sycl_device_context.cc
            tensorflow/core/common_runtime/sycl/sycl_device_factory.cc
            tensorflow/core/common_runtime/allocator_retry.cc
            tensorflow/core/common_runtime/bfc_allocator.cc
            tensorflow/core/common_runtime/build_graph_options.cc
            tensorflow/core/common_runtime/constant_folding.cc
            tensorflow/core/common_runtime/copy_tensor.cc
            tensorflow/core/common_runtime/costmodel_manager.cc
            tensorflow/core/common_runtime/debugger_state_interface.cc
            tensorflow/core/common_runtime/device.cc
            tensorflow/core/common_runtime/device_factory.cc
            tensorflow/core/common_runtime/device_mgr.cc
            tensorflow/core/common_runtime/device_set.cc
            tensorflow/core/common_runtime/executor.cc
            tensorflow/core/common_runtime/function.cc
            tensorflow/core/common_runtime/graph_optimizer.cc
            tensorflow/core/common_runtime/graph_runner.cc
            tensorflow/core/common_runtime/local_device.cc
            tensorflow/core/common_runtime/memory_types.cc
            tensorflow/core/common_runtime/optimization_registry.cc
            tensorflow/core/common_runtime/parallel_concat_optimizer.cc
            tensorflow/core/common_runtime/process_util.cc
            tensorflow/core/common_runtime/renamed_device.cc
            tensorflow/core/common_runtime/rendezvous_mgr.cc
            tensorflow/core/common_runtime/resource_variable_read_optimizer.cc
            tensorflow/core/common_runtime/session.cc
            tensorflow/core/common_runtime/session_factory.cc
            tensorflow/core/common_runtime/session_options.cc
            tensorflow/core/common_runtime/session_state.cc
            tensorflow/core/common_runtime/simple_graph_execution_state.cc
            tensorflow/core/common_runtime/simple_placer.cc
            tensorflow/core/common_runtime/stats_publisher_interface.cc
            tensorflow/core/common_runtime/step_stats_collector.cc
            tensorflow/core/common_runtime/threadpool_device.cc
            tensorflow/core/common_runtime/threadpool_device_factory.cc
            tensorflow/core/common_runtime/shape_refiner.cc
            tensorflow/core/common_runtime/direct_session.cc
            tensorflow/core/graph/gradients.cc
            tensorflow/core/graph/mkl_layout_pass.cc
            tensorflow/core/graph/mkl_tfconversion_pass.cc
            tensorflow/core/graph/quantize_training.cc
            tensorflow/core/graph/algorithm.cc
            tensorflow/core/graph/colors.cc
            tensorflow/core/graph/control_flow.cc
            tensorflow/core/graph/costmodel.cc
            tensorflow/core/graph/graph.cc
            tensorflow/core/graph/graph_constructor.cc
            tensorflow/core/graph/graph_def_builder.cc
            tensorflow/core/graph/graph_partition.cc
            tensorflow/core/graph/node_builder.cc
            tensorflow/core/graph/optimizer_cse.cc
            tensorflow/core/graph/subgraph.cc
            tensorflow/core/graph/tensor_id.cc
            tensorflow/core/graph/validate.cc
            tensorflow/contrib/android/jni/run_stats_jni.cc
            tensorflow/contrib/android/asset_manager_filesystem.cc
            tensorflow/java/src/main/native/exception_jni.cc
            tensorflow/java/src/main/native/graph_jni.cc
            tensorflow/java/src/main/native/operation_builder_jni.cc
            tensorflow/java/src/main/native/operation_jni.cc
            tensorflow/java/src/main/native/saved_model_bundle_jni.cc
            tensorflow/java/src/main/native/session_jni.cc
            tensorflow/java/src/main/native/tensor_jni.cc
            tensorflow/java/src/main/native/tensorflow_jni.cc
            tensorflow/core/kernels/aggregate_ops.cc
            tensorflow/core/kernels/bias_op.cc
            tensorflow/core/kernels/cast_op.cc
            tensorflow/core/kernels/cast_op_impl_bfloat.cc
            tensorflow/core/kernels/cast_op_impl_bool.cc
            tensorflow/core/kernels/cast_op_impl_complex128.cc
            tensorflow/core/kernels/cast_op_impl_complex64.cc
            tensorflow/core/kernels/cast_op_impl_double.cc
            tensorflow/core/kernels/cast_op_impl_float.cc
            tensorflow/core/kernels/cast_op_impl_half.cc
            tensorflow/core/kernels/cast_op_impl_int16.cc
            tensorflow/core/kernels/cast_op_impl_int32.cc
            tensorflow/core/kernels/cast_op_impl_int64.cc
            tensorflow/core/kernels/cast_op_impl_int8.cc
            tensorflow/core/kernels/cast_op_impl_uint16.cc
            tensorflow/core/kernels/cast_op_impl_uint8.cc
            tensorflow/core/kernels/concat_lib_cpu.cc
            tensorflow/core/kernels/concat_op.cc
            tensorflow/core/kernels/constant_op.cc
            tensorflow/core/kernels/cwise_ops_common.cc
            tensorflow/core/kernels/dense_update_functor.cc
            tensorflow/core/kernels/dense_update_ops.cc
            tensorflow/core/kernels/example_parsing_ops.cc
            tensorflow/core/kernels/fill_functor.cc
            tensorflow/core/kernels/function_ops.cc
            tensorflow/core/kernels/gather_op.cc
            tensorflow/core/kernels/identity_op.cc
            tensorflow/core/kernels/immutable_constant_op.cc
            tensorflow/core/kernels/matmul_op.cc
            tensorflow/core/kernels/no_op.cc
            tensorflow/core/kernels/non_max_suppression_op.cc
            tensorflow/core/kernels/one_hot_op.cc
            tensorflow/core/kernels/pack_op.cc
            tensorflow/core/kernels/reshape_op.cc
            tensorflow/core/kernels/reverse_sequence_op.cc
            tensorflow/core/kernels/sendrecv_ops.cc
            tensorflow/core/kernels/sequence_ops.cc
            tensorflow/core/kernels/shape_ops.cc
            tensorflow/core/kernels/slice_op.cc
            tensorflow/core/kernels/slice_op_cpu_impl_1.cc
            tensorflow/core/kernels/slice_op_cpu_impl_2.cc
            tensorflow/core/kernels/slice_op_cpu_impl_3.cc
            tensorflow/core/kernels/slice_op_cpu_impl_4.cc
            tensorflow/core/kernels/slice_op_cpu_impl_5.cc
            tensorflow/core/kernels/slice_op_cpu_impl_6.cc
            tensorflow/core/kernels/slice_op_cpu_impl_7.cc
            tensorflow/core/kernels/softmax_op.cc
            tensorflow/core/kernels/split_lib_cpu.cc
            tensorflow/core/kernels/split_op.cc
            tensorflow/core/kernels/split_v_op.cc
            tensorflow/core/kernels/strided_slice_op.cc
            tensorflow/core/kernels/strided_slice_op_inst_0.cc
            tensorflow/core/kernels/strided_slice_op_inst_1.cc
            tensorflow/core/kernels/strided_slice_op_inst_2.cc
            tensorflow/core/kernels/strided_slice_op_inst_3.cc
            tensorflow/core/kernels/strided_slice_op_inst_4.cc
            tensorflow/core/kernels/strided_slice_op_inst_5.cc
            tensorflow/core/kernels/strided_slice_op_inst_6.cc
            tensorflow/core/kernels/strided_slice_op_inst_7.cc
            tensorflow/core/kernels/unpack_op.cc
            tensorflow/core/kernels/variable_ops.cc
            tensorflow/core/kernels/argmax_op.cc
            tensorflow/core/kernels/avgpooling_op.cc
            tensorflow/core/kernels/batch_matmul_op_real.cc
            tensorflow/core/kernels/batch_norm_op.cc
            tensorflow/core/kernels/bcast_ops.cc
            tensorflow/core/kernels/check_numerics_op.cc
            tensorflow/core/kernels/control_flow_ops.cc
            tensorflow/core/kernels/conv_grad_filter_ops.cc
            tensorflow/core/kernels/conv_grad_input_ops.cc
            tensorflow/core/kernels/conv_grad_ops.cc
            tensorflow/core/kernels/conv_ops.cc
            tensorflow/core/kernels/conv_ops_fused.cc
            tensorflow/core/kernels/conv_ops_using_gemm.cc
            tensorflow/core/kernels/crop_and_resize_op.cc
            tensorflow/core/kernels/cwise_op_abs.cc
            tensorflow/core/kernels/cwise_op_add_1.cc
            tensorflow/core/kernels/cwise_op_add_2.cc
            tensorflow/core/kernels/cwise_op_bitwise_and.cc
            tensorflow/core/kernels/cwise_op_bitwise_or.cc
            tensorflow/core/kernels/cwise_op_bitwise_xor.cc
            tensorflow/core/kernels/cwise_op_div.cc
            tensorflow/core/kernels/cwise_op_equal_to_1.cc
            tensorflow/core/kernels/cwise_op_equal_to_2.cc
            tensorflow/core/kernels/cwise_op_exp.cc
            tensorflow/core/kernels/cwise_op_floor.cc
            tensorflow/core/kernels/cwise_op_floor_div.cc
            tensorflow/core/kernels/cwise_op_greater.cc
            tensorflow/core/kernels/cwise_op_greater_equal.cc
            tensorflow/core/kernels/cwise_op_invert.cc
            tensorflow/core/kernels/cwise_op_isfinite.cc
            tensorflow/core/kernels/cwise_op_less.cc
            tensorflow/core/kernels/cwise_op_log.cc
            tensorflow/core/kernels/cwise_op_logical_and.cc
            tensorflow/core/kernels/cwise_op_logical_not.cc
            tensorflow/core/kernels/cwise_op_maximum.cc
            tensorflow/core/kernels/cwise_op_minimum.cc
            tensorflow/core/kernels/cwise_op_mul_1.cc
            tensorflow/core/kernels/cwise_op_mul_2.cc
            tensorflow/core/kernels/cwise_op_neg.cc
            tensorflow/core/kernels/cwise_op_pow.cc
            tensorflow/core/kernels/cwise_op_reciprocal.cc
            tensorflow/core/kernels/cwise_op_rsqrt.cc
            tensorflow/core/kernels/cwise_op_select.cc
            tensorflow/core/kernels/cwise_op_sigmoid.cc
            tensorflow/core/kernels/cwise_op_sign.cc
            tensorflow/core/kernels/cwise_op_sqrt.cc
            tensorflow/core/kernels/cwise_op_square.cc
            tensorflow/core/kernels/cwise_op_squared_difference.cc
            tensorflow/core/kernels/cwise_op_sub.cc
            tensorflow/core/kernels/cwise_op_tanh.cc
            tensorflow/core/kernels/deep_conv2d.cc
            tensorflow/core/kernels/depthwise_conv_op.cc
            tensorflow/core/kernels/dynamic_partition_op.cc
            tensorflow/core/kernels/fake_quant_ops.cc
            tensorflow/core/kernels/fifo_queue.cc
            tensorflow/core/kernels/fused_batch_norm_op.cc
            tensorflow/core/kernels/batchtospace_op.cc
            tensorflow/core/kernels/ctc_decoder_ops.cc
            tensorflow/core/kernels/decode_bmp_op.cc
            tensorflow/core/kernels/depthtospace_op.cc
            tensorflow/core/kernels/dynamic_stitch_op.cc
            tensorflow/core/kernels/in_topk_op.cc
            tensorflow/core/kernels/logging_ops.cc
            tensorflow/core/kernels/lrn_op.cc
            tensorflow/core/kernels/maxpooling_op.cc
            tensorflow/core/kernels/mirror_pad_op.cc
            tensorflow/core/kernels/mirror_pad_op_cpu_impl_1.cc
            tensorflow/core/kernels/mirror_pad_op_cpu_impl_2.cc
            tensorflow/core/kernels/mirror_pad_op_cpu_impl_3.cc
            tensorflow/core/kernels/mirror_pad_op_cpu_impl_4.cc
            tensorflow/core/kernels/mirror_pad_op_cpu_impl_5.cc
            tensorflow/core/kernels/pad_op.cc
            tensorflow/core/kernels/padding_fifo_queue.cc
            tensorflow/core/kernels/padding_fifo_queue_op.cc
            tensorflow/core/kernels/queue_base.cc
            tensorflow/core/kernels/queue_ops.cc
            tensorflow/core/kernels/random_op.cc
            tensorflow/core/kernels/reduction_ops_all.cc
            tensorflow/core/kernels/reduction_ops_any.cc
            tensorflow/core/kernels/reduction_ops_common.cc
            tensorflow/core/kernels/reduction_ops_max.cc
            tensorflow/core/kernels/reduction_ops_mean.cc
            tensorflow/core/kernels/reduction_ops_min.cc
            tensorflow/core/kernels/reduction_ops_prod.cc
            tensorflow/core/kernels/reduction_ops_sum.cc
            tensorflow/core/kernels/relu_op.cc
            tensorflow/core/kernels/resize_bilinear_op.cc
            tensorflow/core/kernels/resize_nearest_neighbor_op.cc
            tensorflow/core/kernels/restore_op.cc
            tensorflow/core/kernels/reverse_op.cc
            tensorflow/core/kernels/save_op.cc
            tensorflow/core/kernels/save_restore_tensor.cc
            tensorflow/core/kernels/save_restore_v2_ops.cc
            tensorflow/core/kernels/session_ops.cc
            tensorflow/core/kernels/softplus_op.cc
            tensorflow/core/kernels/softsign_op.cc
            tensorflow/core/kernels/spacetobatch_functor.cc
            tensorflow/core/kernels/spacetobatch_op.cc
            tensorflow/core/kernels/spacetodepth_op.cc
            tensorflow/core/kernels/sparse_to_dense_op.cc
            tensorflow/core/kernels/stack_ops.cc
            tensorflow/core/kernels/string_join_op.cc
            tensorflow/core/kernels/summary_op.cc
            tensorflow/core/kernels/tensor_array.cc
            tensorflow/core/kernels/tensor_array_ops.cc
            tensorflow/core/kernels/tile_functor_cpu.cc
            tensorflow/core/kernels/tile_ops.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_1.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_2.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_3.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_4.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_5.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_6.cc
            tensorflow/core/kernels/tile_ops_cpu_impl_7.cc
            tensorflow/core/kernels/topk_op.cc
            tensorflow/core/kernels/training_op_helpers.cc
            tensorflow/core/kernels/training_ops.cc
            tensorflow/core/kernels/transpose_functor_cpu.cc
            tensorflow/core/kernels/transpose_op.cc
            tensorflow/core/kernels/warn_about_ints.cc
            tensorflow/core/kernels/where_op.cc
            tensorflow/core/kernels/xent_op.cc
            tensorflow/core/kernels/dequantize_op.cc
            tensorflow/core/kernels/meta_support.cc
            tensorflow/core/kernels/quantization_utils.cc
            tensorflow/core/kernels/quantize_down_and_shrink_range.cc
            tensorflow/core/kernels/quantize_op.cc
            tensorflow/core/kernels/quantized_activation_ops.cc
            tensorflow/core/kernels/quantized_add_op.cc
            tensorflow/core/kernels/quantized_batch_norm_op.cc
            tensorflow/core/kernels/quantized_bias_add_op.cc
            tensorflow/core/kernels/quantized_concat_op.cc
            tensorflow/core/kernels/quantized_conv_ops.cc
            tensorflow/core/kernels/quantized_instance_norm.cc
            tensorflow/core/kernels/quantized_matmul_op.cc
            tensorflow/core/kernels/quantized_mul_op.cc
            tensorflow/core/kernels/quantized_pooling_ops.cc
            tensorflow/core/kernels/quantized_reshape_op.cc
            tensorflow/core/kernels/quantized_resize_bilinear_op.cc
            tensorflow/core/kernels/requantization_range_op.cc
            tensorflow/core/kernels/requantize.cc
            tensorflow/core/ops/training_ops.cc
            tensorflow/core/ops/string_ops.cc
            tensorflow/core/ops/state_ops.cc
            tensorflow/core/ops/sparse_ops.cc
            tensorflow/core/ops/sendrecv_ops.cc
            tensorflow/core/ops/script_ops.cc
            tensorflow/core/ops/remote_fused_graph_ops.cc
            tensorflow/core/ops/random_ops.cc
            tensorflow/core/ops/random_grad.cc
            tensorflow/core/ops/parsing_ops.cc
            tensorflow/core/ops/no_op.cc
            tensorflow/core/ops/nn_ops.cc
            tensorflow/core/ops/nn_grad.cc
            tensorflow/core/ops/math_ops.cc
            tensorflow/core/ops/math_grad.cc
            tensorflow/core/ops/logging_ops.cc
            tensorflow/core/ops/linalg_ops.cc
            tensorflow/core/ops/io_ops.cc
            tensorflow/core/ops/image_ops.cc
            tensorflow/core/ops/functional_ops.cc
            tensorflow/core/ops/functional_grad.cc
            tensorflow/core/ops/function_ops.cc
            tensorflow/core/ops/data_flow_ops.cc
            tensorflow/core/ops/ctc_ops.cc
            tensorflow/core/ops/control_flow_ops.cc
            tensorflow/core/ops/candidate_sampling_ops.cc
            tensorflow/core/ops/array_ops.cc
            tensorflow/core/ops/array_grad.cc
            tensorflow/core/ops/bitwise_ops.cc
            third_party/fft2d/fftsg.c
            third_party/protobuf/google/protobuf/any.cc
            third_party/protobuf/google/protobuf/any.pb.cc
            third_party/protobuf/google/protobuf/api.pb.cc
            third_party/protobuf/google/protobuf/compiler/importer.cc
            third_party/protobuf/google/protobuf/compiler/parser.cc
            third_party/protobuf/google/protobuf/descriptor.cc
            third_party/protobuf/google/protobuf/descriptor.pb.cc
            third_party/protobuf/google/protobuf/descriptor_database.cc
            third_party/protobuf/google/protobuf/duration.pb.cc
            third_party/protobuf/google/protobuf/dynamic_message.cc
            third_party/protobuf/google/protobuf/empty.pb.cc
            third_party/protobuf/google/protobuf/extension_set_heavy.cc
            third_party/protobuf/google/protobuf/field_mask.pb.cc
            third_party/protobuf/google/protobuf/generated_message_reflection.cc
            third_party/protobuf/google/protobuf/io/gzip_stream.cc
            third_party/protobuf/google/protobuf/io/printer.cc
            third_party/protobuf/google/protobuf/io/strtod.cc
            third_party/protobuf/google/protobuf/io/tokenizer.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream_impl.cc
            third_party/protobuf/google/protobuf/map_field.cc
            third_party/protobuf/google/protobuf/message.cc
            third_party/protobuf/google/protobuf/reflection_ops.cc
            third_party/protobuf/google/protobuf/service.cc
            third_party/protobuf/google/protobuf/source_context.pb.cc
            third_party/protobuf/google/protobuf/struct.pb.cc
            third_party/protobuf/google/protobuf/stubs/mathlimits.cc
            third_party/protobuf/google/protobuf/stubs/substitute.cc
            third_party/protobuf/google/protobuf/text_format.cc
            third_party/protobuf/google/protobuf/timestamp.pb.cc
            third_party/protobuf/google/protobuf/type.pb.cc
            third_party/protobuf/google/protobuf/unknown_field_set.cc
            third_party/protobuf/google/protobuf/util/delimited_message_util.cc
            third_party/protobuf/google/protobuf/util/field_comparator.cc
            third_party/protobuf/google/protobuf/util/field_mask_util.cc
            third_party/protobuf/google/protobuf/util/internal/datapiece.cc
            third_party/protobuf/google/protobuf/util/internal/default_value_objectwriter.cc
            third_party/protobuf/google/protobuf/util/internal/error_listener.cc
            third_party/protobuf/google/protobuf/util/internal/field_mask_utility.cc
            third_party/protobuf/google/protobuf/util/internal/json_escaping.cc
            third_party/protobuf/google/protobuf/util/internal/json_objectwriter.cc
            third_party/protobuf/google/protobuf/util/internal/json_stream_parser.cc
            third_party/protobuf/google/protobuf/util/internal/object_writer.cc
            third_party/protobuf/google/protobuf/util/internal/proto_writer.cc
            third_party/protobuf/google/protobuf/util/internal/protostream_objectsource.cc
            third_party/protobuf/google/protobuf/util/internal/protostream_objectwriter.cc
            third_party/protobuf/google/protobuf/util/internal/type_info.cc
            third_party/protobuf/google/protobuf/util/internal/type_info_test_helper.cc
            third_party/protobuf/google/protobuf/util/internal/utility.cc
            third_party/protobuf/google/protobuf/util/json_util.cc
            third_party/protobuf/google/protobuf/util/message_differencer.cc
            third_party/protobuf/google/protobuf/util/time_util.cc
            third_party/protobuf/google/protobuf/util/type_resolver_util.cc
            third_party/protobuf/google/protobuf/wire_format.cc
            third_party/protobuf/google/protobuf/wrappers.pb.cc
            third_party/protobuf/google/protobuf/arena.cc
            third_party/protobuf/google/protobuf/arenastring.cc
            third_party/protobuf/google/protobuf/extension_set.cc
            third_party/protobuf/google/protobuf/generated_message_util.cc
            third_party/protobuf/google/protobuf/io/coded_stream.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream.cc
            third_party/protobuf/google/protobuf/io/zero_copy_stream_impl_lite.cc
            third_party/protobuf/google/protobuf/message_lite.cc
            third_party/protobuf/google/protobuf/repeated_field.cc
            third_party/protobuf/google/protobuf/stubs/atomicops_internals_x86_gcc.cc
            third_party/protobuf/google/protobuf/stubs/atomicops_internals_x86_msvc.cc
            third_party/protobuf/google/protobuf/stubs/bytestream.cc
            third_party/protobuf/google/protobuf/stubs/common.cc
            third_party/protobuf/google/protobuf/stubs/int128.cc
            third_party/protobuf/google/protobuf/stubs/once.cc
            third_party/protobuf/google/protobuf/stubs/status.cc
            third_party/protobuf/google/protobuf/stubs/statusor.cc
            third_party/protobuf/google/protobuf/stubs/stringpiece.cc
            third_party/protobuf/google/protobuf/stubs/stringprintf.cc
            third_party/protobuf/google/protobuf/stubs/structurally_valid.cc
            third_party/protobuf/google/protobuf/stubs/strutil.cc
            third_party/protobuf/google/protobuf/stubs/time.cc
            third_party/protobuf/google/protobuf/wire_format_lite.cc
            third_party/protobuf/google/protobuf/compiler/code_generator.cc
            third_party/protobuf/google/protobuf/compiler/command_line_interface.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_enum.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_extension.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_field.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_file.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_generator.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_helpers.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_map_field.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_message.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_message_field.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_service.cc
            third_party/protobuf/google/protobuf/compiler/cpp/cpp_string_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_doc_comment.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_enum.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_field_base.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_generator.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_helpers.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_map_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_message.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_message_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_reflection_class.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_repeated_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_repeated_message_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_repeated_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_source_generator_base.cc
            third_party/protobuf/google/protobuf/compiler/csharp/csharp_wrapper_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_context.cc
            third_party/protobuf/google/protobuf/compiler/java/java_doc_comment.cc
            third_party/protobuf/google/protobuf/compiler/java/java_enum.cc
            third_party/protobuf/google/protobuf/compiler/java/java_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_enum_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_enum_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_extension.cc
            third_party/protobuf/google/protobuf/compiler/java/java_extension_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_file.cc
            third_party/protobuf/google/protobuf/compiler/java/java_generator.cc
            third_party/protobuf/google/protobuf/compiler/java/java_generator_factory.cc
            third_party/protobuf/google/protobuf/compiler/java/java_helpers.cc
            third_party/protobuf/google/protobuf/compiler/java/java_lazy_message_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_lazy_message_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_map_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_map_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message_builder.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message_builder_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_message_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_name_resolver.cc
            third_party/protobuf/google/protobuf/compiler/java/java_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_primitive_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/java/java_service.cc
            third_party/protobuf/google/protobuf/compiler/java/java_shared_code_generator.cc
            third_party/protobuf/google/protobuf/compiler/java/java_string_field.cc
            third_party/protobuf/google/protobuf/compiler/java/java_string_field_lite.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_enum.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_extension.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_field.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_file.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_generator.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_helpers.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_map_field.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_message.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_message_field.cc
            third_party/protobuf/google/protobuf/compiler/javanano/javanano_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/js/js_generator.cc
            third_party/protobuf/google/protobuf/compiler/js/well_known_types_embed.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_enum.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_enum_field.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_extension.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_field.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_file.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_generator.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_helpers.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_map_field.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_message.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_message_field.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_oneof.cc
            third_party/protobuf/google/protobuf/compiler/objectivec/objectivec_primitive_field.cc
            third_party/protobuf/google/protobuf/compiler/php/php_generator.cc
            third_party/protobuf/google/protobuf/compiler/plugin.cc
            third_party/protobuf/google/protobuf/compiler/plugin.pb.cc
            third_party/protobuf/google/protobuf/compiler/profile.pb.cc
            third_party/protobuf/google/protobuf/compiler/python/python_generator.cc
            third_party/protobuf/google/protobuf/compiler/ruby/ruby_generator.cc
            third_party/protobuf/google/protobuf/compiler/subprocess.cc
            third_party/protobuf/google/protobuf/compiler/zip_writer.cc
            )

target_include_directories(tensorflow_inference PRIVATE
                           ${CMAKE_SOURCE_DIR}/
                           ${CMAKE_SOURCE_DIR}/third_party/eigen3
                           ${CMAKE_SOURCE_DIR}/third_party/protobuf
                           ${CMAKE_SOURCE_DIR}/third_party/gemmlowp
                           )

target_link_libraries(tensorflow_inference
                      android
                      log
                      jnigraphics
                      m
                      atomic
                      z)

#########################################################
MESSAGE(STATUS "Project: tensorflow_demo")

get_filename_component(SAMPLE_SRC_DIR  ${CMAKE_SOURCE_DIR}  ABSOLUTE)
file(GLOB_RECURSE tensorflow_demo_sources ${SAMPLE_SRC_DIR}/demo/*.*)
add_library(tensorflow_demo SHARED
            ${tensorflow_demo_sources})
target_include_directories(tensorflow_demo PRIVATE
                           ${CMAKE_SOURCE_DIR}/demo/)

target_link_libraries(tensorflow_demo
                      android
                      log
                      jnigraphics
                      m
                      atomic
                      z)
